Add profile, auth & user api routes

--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "author": "Mihailo Maksa\u001b[D\u001b[C",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
     "config": "^3.3.1",
     "express": "^4.17.1",
     "express-validation": "^3.0.2",
+    "express-validator": "^6.4.0",
     "gravatar": "^1.8.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.7",
