--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "DevConnector is a social network that aims to connect developers \u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D \u001b[Dsoftware\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[D\u001b[D\u001b developers from all around the world in the one place!",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server",
-    "server": "nodemon server"
+    "server": "nodemon server",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "Mihailo Maksa\u001b[D\u001b[C",
   "license": "ISC",
@@ -15,12 +16,10 @@
     "bcryptjs": "^2.4.3",
     "config": "^3.3.1",
     "express": "^4.17.1",
-    "express-validation": "^3.0.2",
     "express-validator": "^6.4.0",
     "gravatar": "^1.8.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.7",
-    "request": "^2.88.2"
+    "mongoose": "^5.9.7"
   },
   "devDependencies": {
     "concurrently": "^5.1.0",
